--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://unpkg.com https://tally.so https://gc.zgo.at; style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; frame-src https://tally.so; connect-src 'self' https://unpkg.com https://tally.so https://gc.zgo.at https://*.tile.openstreetmap.org https://docs.google.com; worker-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self' https://tally.so;"
+                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://unpkg.com https://tally.so https://gc.zgo.at; style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; frame-src https://tally.so; connect-src 'self' https://unpkg.com https://tally.so https://gc.zgo.at https://*.tile.openstreetmap.org https://docs.google.com https://*.basemaps.cartocdn.com; worker-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self' https://tally.so;"
                 },
                 {
                     "key": "X-Frame-Options",
